feat: add Footer and Header components for site navigation and branding
feat: implement OutdoorModal for managing outdoor entries with form validation

feat: create ReservaModal for handling reservations with outdoor selection

feat: add background boxes component for visual effects

feat: implement utility functions for class name management

chore: configure Tailwind CSS for custom theming and responsive design

chore: set up TypeScript configuration for frontend development

chore: configure Nginx for API proxying and static file serving

chore: set up Docker and Nginx for backend service management

chore: remove obsolete Makefile and database initialization scripts

feat: add backup and restore scripts for database management

fix: correct database initialization and reset scripts for reliability

feat: add wait-for-postgres script for service readiness checks

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-# Banco de Dados
+DATABASE_URL=postgresql://usuario:senha@localhost:5432/outdoor_rental
+JWT_SECRET=sua_chave_secreta_aqui_muito_segura_2024
+PORT=3333
+NODE_ENV=development
+
 DB_USER=outdoor_user
 DB_PASSWORD=outdoor_pass
 DB_NAME=outdoor_rental
@@ -6,11 +10,6 @@ DB_NAME=outdoor_rental
 # pgAdmin
 PGADMIN_EMAIL=admin@outdoor.com
 PGADMIN_PASSWORD=admin123
-
-# Aplicação
-NODE_ENV=development
-PORT=3333
-JWT_SECRET=seu_jwt_secret_super_seguro_2024
 
 # Redis (opcional)
 REDIS_URL=redis://redis:6379
